src/engine/horizon/src/render_post/tests/err-unused-ref-1/expected.stderr
[31merror:[0m unused ref: `b`
   ╭─[ <unknown>:5:9 ]
   │
 5 │ <ref id="b">
   │         ─┬─  
   │          ╰─── unused ref: `b`
───╯

compilation failed
